@@ -164,6 +164,7 @@ void list_mini_icon(unsigned long *body);
 void list_restack(unsigned long *body, unsigned long length);
 void list_property_change(unsigned long *body);
 void list_end(void);
+void list_string(unsigned long *body);
 int My_XNextEvent(Display *dpy, XEvent *event);
 
 /* Stuff in x_pager.c */
@@ -204,3 +205,4 @@ void MoveStickyWindows(void);
 void MapBalloonWindow(PagerWindow *t, Bool is_icon_view);
 void UnmapBalloonWindow(void);
 void DrawInBalloonWindow(int i);
+void HandleScrollDone();
