@@ -23,8 +23,8 @@
 
 2006-04-14  Viktor Griph  <griph@dd.chalmers.se>
 
-        * fvwm/fvwm.1.in (All):
-        corrected typo
+	* fvwm/fvwm.1.in (All):
+	corrected typo
 	
 2006-04-13  Viktor Griph  <griph@dd.chalmers.se>
 
